syntax = "proto3";

package cart;
option go_package = "github.com/ahinestrog/mybookstore/proto/gen/cart;cartpb";

import "common.proto";

service Cart {
  rpc GetCart(common.UserRef) returns (CartView);
  rpc AddItem(AddItemRequest) returns (CartView);
  rpc RemoveItem(RemoveItemRequest) returns (CartView);
  rpc ClearCart(common.UserRef) returns (CartView);
}

message AddItemRequest {
  int64 user_id = 1;
  int64 book_id = 2;
  int32 qty = 3; // >=1
}

message RemoveItemRequest {
  int64 user_id = 1;
  int64 book_id = 2;
  int32 qty = 3; // si omites o es 0 => elimina la l√≠nea
}

message CartItem {
  int64 book_id = 1;
  string title = 2;
  int32 qty = 3;
  common.Money unit_price = 4;
  common.Money line_total = 5;
}

message CartView {
  repeated CartItem items = 1;
  common.Money total = 2;
}
